Clean HoverLerp and remove weird spacing stuff